// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item default 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 euRCHn"
>
  <span
    className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
  >
    First
  </span>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item disabled 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
>
  <span
    className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
  >
    First
  </span>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList Item selected 1`] = `
<span
  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 gKoTxg"
>
  <span
    className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
  >
    First
  </span>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eNjAgu"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 ggbGKR"
    >
      <svg
        aria-hidden="true"
        className="IconBase__StyledIconBase-sc-10cbji3-0 gBqBsS"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
        />
      </svg>
    </div>
  </div>
</span>
`;

exports[`Storyshots Molecules | Input / Select / SingleSelectList List with different arrow positions 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Default (right)
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 SingleSelectListstories__DropdownBubbleWithPadding-at8jo7-0 fQSRcK"
      >
        <div
          className="FadedScroll__Container-sc-134qq0d-0 xzNjy"
        >
          <div
            className="FadedScroll__Scroller-sc-134qq0d-1 iWgyxh"
          >
            <div
              className="FadedScroll__Content-sc-134qq0d-2 hzHbxu"
            >
              <div
                className="FadedScroll__IntersectionTop-sc-134qq0d-4 crnks"
              />
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 euRCHn"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Default?
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 gKoTxg"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  First
                </span>
                <div
                  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eNjAgu"
                >
                  <div
                    className="Box__StyledDiv-sc-1bfv3i9-0 ggbGKR"
                  >
                    <svg
                      aria-hidden="true"
                      className="IconBase__StyledIconBase-sc-10cbji3-0 gBqBsS"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 euRCHn"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  SecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecondSecond
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <div
                className="FadedScroll__IntersectionBottom-sc-134qq0d-3 bLKvVr"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Left
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 SingleSelectListstories__DropdownBubbleWithPadding-at8jo7-0 gsSGxq"
      >
        <div
          className="FadedScroll__Container-sc-134qq0d-0 xzNjy"
        >
          <div
            className="FadedScroll__Scroller-sc-134qq0d-1 iWgyxh"
          >
            <div
              className="FadedScroll__Content-sc-134qq0d-2 hzHbxu"
            >
              <div
                className="FadedScroll__IntersectionTop-sc-134qq0d-4 crnks"
              />
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 euRCHn"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Default?
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 gKoTxg"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  First
                </span>
                <div
                  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eNjAgu"
                >
                  <div
                    className="Box__StyledDiv-sc-1bfv3i9-0 ggbGKR"
                  >
                    <svg
                      aria-hidden="true"
                      className="IconBase__StyledIconBase-sc-10cbji3-0 gBqBsS"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <div
                className="FadedScroll__IntersectionBottom-sc-134qq0d-3 bLKvVr"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Center
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 SingleSelectListstories__DropdownBubbleWithPadding-at8jo7-0 haByhW"
      >
        <div
          className="FadedScroll__Container-sc-134qq0d-0 xzNjy"
        >
          <div
            className="FadedScroll__Scroller-sc-134qq0d-1 iWgyxh"
          >
            <div
              className="FadedScroll__Content-sc-134qq0d-2 hzHbxu"
            >
              <div
                className="FadedScroll__IntersectionTop-sc-134qq0d-4 crnks"
              />
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 euRCHn"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Default?
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 gKoTxg"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  First
                </span>
                <div
                  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eNjAgu"
                >
                  <div
                    className="Box__StyledDiv-sc-1bfv3i9-0 ggbGKR"
                  >
                    <svg
                      aria-hidden="true"
                      className="IconBase__StyledIconBase-sc-10cbji3-0 gBqBsS"
                      focusable="false"
                      preserveAspectRatio="xMidYMid meet"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.76083729 16.4144594L2.20525972 9.86336213 0 12.2093109 8.79670106 21 24 5.30897552 21.7583339 3z"
                      />
                    </svg>
                  </div>
                </div>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 euRCHn"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Second
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <span
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ZvTuu SingleSelectList__StyledOption-sc-13wx8qv-4 hWlSug"
              >
                <span
                  className="SingleSelectList__EllipsizingText-sc-13wx8qv-5 ckFXIa"
                >
                  Disabled
                </span>
              </span>
              <div
                className="FadedScroll__IntersectionBottom-sc-134qq0d-3 bLKvVr"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
